.provarCaches/00D5f000005vwGkEAI/objects/rstk__menu__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_menu</customHelpPage>
    <description>menu__c</description>
    <fields>
        <fullName>rstk__activity_enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if activities are to be shown on the main page for the associated object. Note Activities need to be enabled for the object or there will be an &quot;Open Activities is not a valid child relationship&quot; error when the page loads.</description>
        <inlineHelpText>Check if activities are to be shown on the main page for the associated object. Note Activities need to be enabled for the object or there will be an &quot;Open Activities is not a valid child relationship&quot; error when the page loads.</inlineHelpText>
        <label>Activities Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__approval_enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked the approval process will be shown on the object page</description>
        <inlineHelpText>When checked the approval process will be shown on the object page</inlineHelpText>
        <label>Approval Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__appsecuritykey__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>App Security Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>TEXT(IF(ISBLANK(rstk__menutype__c),0,rstk__menutype__c)) &amp; &apos;_&apos; &amp;  rstk__header__c &amp; &apos;_&apos; &amp;  rstk__label__c</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__header__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>header</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__hideaddlink__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Hide Add Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__href__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>href</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__id__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>id</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__imageclass__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>imageclass</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__keyprefix__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>keyprefix</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__label__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__level__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>level</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__menutype__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Menu Configuration</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__page__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>page</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pagekey__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Page Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__parentid__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>parentid</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__recordtype__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Primary Object Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__relatedlists__c</fullName>
        <inlineHelpText>Enter comma delimited Child Relationship Names for related objects you wish to have displayed in related list format at the bottom of the VF page (view mode)</inlineHelpText>
        <label>Related List Child Objects</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__rsfinancials__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Rootstock Financials</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__secnsequence__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>secnsequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sequence__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__subsection__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>subsection</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Menu</label>
    <listViews>
        <fullName>rstk__Active3</fullName>
        <columns>NAME</columns>
        <columns>rstk__externalid__c</columns>
        <columns>rstk__menutype__c</columns>
        <columns>rstk__header__c</columns>
        <columns>rstk__label__c</columns>
        <columns>rstk__href__c</columns>
        <columns>rstk__pagekey__c</columns>
        <columns>rstk__recordtype__c</columns>
        <columns>rstk__parentid__c</columns>
        <columns>rstk__sequence__c</columns>
        <columns>rstk__appsecuritykey__c</columns>
        <columns>rstk__inactive__c</columns>
        <columns>rstk__keyprefix__c</columns>
        <columns>rstk__level__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__inactive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Active</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__DRP2</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>rstk__appsecuritykey__c</columns>
        <columns>rstk__pagekey__c</columns>
        <columns>rstk__header__c</columns>
        <columns>rstk__href__c</columns>
        <columns>rstk__id__c</columns>
        <columns>rstk__menutype__c</columns>
        <columns>rstk__keyprefix__c</columns>
        <columns>rstk__label__c</columns>
        <columns>rstk__level__c</columns>
        <columns>rstk__parentid__c</columns>
        <columns>rstk__sequence__c</columns>
        <columns>rstk__secnsequence__c</columns>
        <columns>rstk__page__c</columns>
        <columns>rstk__inactive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__parentid__c</field>
            <operation>equals</operation>
            <value>51</value>
        </filters>
        <filters>
            <field>rstk__menutype__c</field>
            <operation>notEqual</operation>
            <value>2</value>
        </filters>
        <label>DRP</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__Financials1</fullName>
        <columns>NAME</columns>
        <columns>rstk__appsecuritykey__c</columns>
        <columns>rstk__pagekey__c</columns>
        <columns>rstk__header__c</columns>
        <columns>rstk__href__c</columns>
        <columns>rstk__id__c</columns>
        <columns>rstk__inactive__c</columns>
        <columns>rstk__parentid__c</columns>
        <columns>rstk__sequence__c</columns>
        <columns>rstk__menutype__c</columns>
        <columns>rstk__recordtype__c</columns>
        <columns>rstk__keyprefix__c</columns>
        <columns>rstk__label__c</columns>
        <columns>rstk__level__c</columns>
        <columns>rstk__page__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__parentid__c</field>
            <operation>equals</operation>
            <value>17</value>
        </filters>
        <filters>
            <field>rstk__menutype__c</field>
            <operation>notEqual</operation>
            <value>2</value>
        </filters>
        <label>Financials</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__Parent</fullName>
        <columns>NAME</columns>
        <columns>rstk__appsecuritykey__c</columns>
        <columns>rstk__pagekey__c</columns>
        <columns>rstk__header__c</columns>
        <columns>rstk__externalid__c</columns>
        <columns>rstk__href__c</columns>
        <columns>rstk__id__c</columns>
        <columns>rstk__inactive__c</columns>
        <columns>rstk__keyprefix__c</columns>
        <columns>rstk__label__c</columns>
        <columns>rstk__level__c</columns>
        <columns>rstk__page__c</columns>
        <columns>rstk__parentid__c</columns>
        <columns>rstk__sequence__c</columns>
        <columns>rstk__secnsequence__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__header__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>rstk__menutype__c</field>
            <operation>notEqual</operation>
            <value>2</value>
        </filters>
        <label>Parent</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__RS_Support_Menu2</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>NAME</columns>
        <columns>rstk__header__c</columns>
        <columns>rstk__appsecuritykey__c</columns>
        <columns>rstk__recordtype__c</columns>
        <columns>rstk__hideaddlink__c</columns>
        <columns>rstk__parentid__c</columns>
        <columns>rstk__label__c</columns>
        <columns>rstk__pagekey__c</columns>
        <columns>rstk__sequence__c</columns>
        <columns>rstk__id__c</columns>
        <columns>rstk__href__c</columns>
        <columns>rstk__activity_enabled__c</columns>
        <columns>rstk__approval_enabled__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__pagekey__c</field>
            <operation>equals</operation>
            <value>ccrstk</value>
        </filters>
        <filters>
            <field>rstk__parentid__c</field>
            <operation>equals</operation>
            <value>970</value>
        </filters>
        <label>RS Support Menu</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__Requisitions1</fullName>
        <columns>NAME</columns>
        <columns>rstk__appsecuritykey__c</columns>
        <columns>rstk__pagekey__c</columns>
        <columns>rstk__header__c</columns>
        <columns>rstk__href__c</columns>
        <columns>rstk__id__c</columns>
        <columns>rstk__menutype__c</columns>
        <columns>rstk__keyprefix__c</columns>
        <columns>rstk__label__c</columns>
        <columns>rstk__level__c</columns>
        <columns>rstk__parentid__c</columns>
        <columns>rstk__sequence__c</columns>
        <columns>rstk__secnsequence__c</columns>
        <columns>rstk__page__c</columns>
        <columns>rstk__inactive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__header__c</field>
            <operation>equals</operation>
            <value>Requisitions</value>
        </filters>
        <filters>
            <field>rstk__menutype__c</field>
            <operation>notEqual</operation>
            <value>2</value>
        </filters>
        <filters>
            <field>rstk__inactive__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>Requisitions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__SO_Processes1</fullName>
        <columns>NAME</columns>
        <columns>rstk__appsecuritykey__c</columns>
        <columns>rstk__pagekey__c</columns>
        <columns>rstk__header__c</columns>
        <columns>rstk__externalid__c</columns>
        <columns>rstk__href__c</columns>
        <columns>rstk__id__c</columns>
        <columns>rstk__inactive__c</columns>
        <columns>rstk__keyprefix__c</columns>
        <columns>rstk__label__c</columns>
        <columns>rstk__level__c</columns>
        <columns>rstk__page__c</columns>
        <columns>rstk__parentid__c</columns>
        <columns>rstk__sequence__c</columns>
        <columns>rstk__secnsequence__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__header__c</field>
            <operation>equals</operation>
            <value>salesorder</value>
        </filters>
        <filters>
            <field>rstk__menutype__c</field>
            <operation>notEqual</operation>
            <value>2</value>
        </filters>
        <label>SO Processes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__Work_Order3</fullName>
        <booleanFilter>(1 AND 2)</booleanFilter>
        <columns>NAME</columns>
        <columns>rstk__appsecuritykey__c</columns>
        <columns>rstk__pagekey__c</columns>
        <columns>rstk__header__c</columns>
        <columns>rstk__href__c</columns>
        <columns>rstk__id__c</columns>
        <columns>rstk__menutype__c</columns>
        <columns>rstk__keyprefix__c</columns>
        <columns>rstk__label__c</columns>
        <columns>rstk__level__c</columns>
        <columns>rstk__parentid__c</columns>
        <columns>rstk__sequence__c</columns>
        <columns>rstk__secnsequence__c</columns>
        <columns>rstk__page__c</columns>
        <columns>rstk__inactive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__header__c</field>
            <operation>contains</operation>
            <value>Work</value>
        </filters>
        <filters>
            <field>rstk__menutype__c</field>
            <operation>notEqual</operation>
            <value>2</value>
        </filters>
        <label>Work Order</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Menu</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstk__Record_Type</fullName>
        <active>true</active>
        <description>Record Type is required to enable Activities and Approvals.</description>
        <errorConditionFormula>( rstk__activity_enabled__c || rstk__approval_enabled__c ) &amp;&amp;  ISBLANK( rstk__recordtype__c )</errorConditionFormula>
        <errorMessage>Record Type is required to enable Activities and Approvals.</errorMessage>
    </validationRules>
</CustomObject>